[package]
name = "bloodline"
version = "0.1.0"
description = "Bloodline — Evolutionary agent vaults on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bloodline"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
blake3 = ">=1.3, <1.8"
